<resources>
    <string name="launcher_name">PIA VPN</string>
    <string name="app_name">VPN by Private Internet Access</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_general">General</string>
    <string name="menu_settings_protocols">Protocols</string>
    <string name="menu_settings_network">Network</string>
    <string name="menu_settings_privacy">Privacy</string>
    <string name="menu_settings_automation">Automation</string>
    <string name="menu_settings_obfuscation">Obfuscation</string>
    <string name="menu_settings_help">Help</string>
    <string name="rportsummary">Using %s port for connection</string>
    <string name="lportsummary">Using local port %s for connection</string>
    <string name="lportrandom">Using random local port for connection</string>
    <string name="server_selection">Server Selection</string>
    <string name="auto_rport">Using automatic port selection</string>
    <string name="automatic_server_selection_main">Automatic</string>
    <string name="automatic_server_selection_main_region">Automatic (%1$s)</string>
    <string name="prompt_login">ie p1234567</string>
    <string name="use_udp_summary">UDP will be used to connect</string>
    <string name="use_tcp_summary">TCP will be used to connect</string>
    <string name="transport">Transport</string>
    <string name="select_port">Select the port to connect to privateinternetaccess.com</string>
    <string name="remote_port">Remote Port</string>
    <string name="remote_port_cap">FORWARDED PORT</string>
    <string name="remote_port_vpn_ip">VPN IP</string>
    <string name="local_port">Local Port</string>
    <string name="find_out_more"><u>Find out more</u></string>
    <string name="connect_onstart_title">Connect on Launch</string>
    <string name="connect_onstart">Connect when app is started</string>
    <string name="connect_on_boot">Launch on System Startup</string>
    <string name="portforwarding">Request Port Forwarding</string>
    <string name="portforwarding_summary">Will allow incoming connections to your mobile device over an external port</string>
    <string name="portfwderror">Error requesting forwarding port: %s</string>
    <string name="mace_toggle">Mace Ad Blocker</string>
    <string name="killswitch">VPN Kill Switch</string>
    <string name="killswitchsummary">Disables your internet connection when the VPN disconnects.</string>
    <string name="killswitchtext">INTERNET KILLSWITCH ENABLED</string>
    <string name="killswitchstatus_description">Our Internet Killswitch doesn\'t allow unprotected Internet activity. Wait for reconnection, connect to our VPN service or disable the killswitch to restore Internet connectivity.</string>
    <string name="requestingportfw">Requesting forwarded port...</string>
    <string name="killswitch_button">Disable</string>
    <string name="action_sign_in_short">Login</string>
    <string name="login">LOGIN</string>
    <string name="logout">Log out</string>
    <string name="accept">accept</string>
    <string name="no_thanks">no thanks</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="state_gen_config">Generating configuration</string>
    <string name="state_waitconnectretry">Waiting %s seconds between connection attempts</string>
    <string name="user_pw_invalid">Username/Password invalid</string>
    <string name="replace_login_title">Replace login information</string>
    <string name="replace_login_msg">Replace login information with new login information? (New username: %1$s, old username: %2$s)</string>
    <string name="subscription_expires_in">Your subscription expires in</string>
    <string name="subscription_expired">Your subscription is</string>
    <string name="per_app_settings">Per App Settings</string>
    <string name="tv_per_app_settings">PER APP SETTINGS</string>
    <string name="help_improve_pia">HELP IMPROVE PIA</string>
    <string name="username_password_already_saved">Username and Password already saved!</string>
    <string name="invalid_email_signup">You must provide a valid email address</string>
    <string name="buyvpn_url_localized">https://www.privateinternetaccess.com/pages/buy-vpn/</string>
    <string name="localport_warning">Local port must be between 1024 and 65535</string>
    <string name="notanumber_localport">Illegal number format for local port</string>
    <string name="notanumber_proxyport">Illegal number format for proxy port</string>
    <string name="thankyou_monthly">Thank you for subscribing to monthly vpn!</string>
    <string name="thankyou_yearly">Thank you for subscribing to yearly vpn!</string>
    <string name="purchase_signing_up">Signing up..</string>
    <string name="purchase_loading">Loading</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_confirmation_text">Logging out will terminate an active VPN connection and leave you unprotected</string>
    <string name="expiry_notification_title">Your subscription expires soon.</string>
    <string name="expiry_notification_onnemonth">You have less than one month left. Renew to stay protected.</string>
    <string name="expiry_notification_oneweek">You have less than one week left. Renew to stay protected.</string>
    <string name="expirty_notification_threedays">You have less than three days left. Renew to stay protected.</string>
    <string name="expirty_notification_oneday">You have less than one day left. Renew to stay protected.</string>
    <string name="error_renew_trial">Trial accounts are not eligible for renewal. Please purchase a new account upon expiry to continue service.</string>
    <string name="error_renew_expired">Your account is inactive and cannot accept new payments. Create a new account by logging out and signing up again.</string>
    <string name="pending_purchase_found">Pending In App purchase found. Login to renew your current subscription.</string>
    <string name="account_not_renewable">Your account cannot be renewed or does renew automatically</string>
    <string name="error_subscribing">"Error purchasing: %1$s "</string>
    <string name="error_active_subscription">You already have an active subscription!</string>
    <string name="error_invalid_auth">Something went wrong. Please try logging in again.</string>
    <string name="usemssfix">Will slightly lower the IP packet size to improve compatibility with some routers and mobile networks.</string>
    <string name="mssfixsummary">Use Small Packets</string>
    <string name="settings_account_bottom_text">Get the Private Internet Access app for your other devices and use the above username to login and secure your connection.</string>
    <string name="settings_account_bottom_text_4">Get the Private Internet Access app for your other devices and use the above username to login and secure your connection.</string>
    <string name="update_email">Update email</string>
    <string name="email_sucessfully_changed">Email address successfully changed</string>
    <string name="copy_toast_text">Text Copied to Clipboard</string>
    <string name="current_region">CURRENT REGION</string>
    <string name="full_licenses">Full licenses</string>
    <string name="email">Email</string>
    <string name="please_wait">Please wait</string>
    <string name="still_connecting">Still trying to connect</string>
    <string name="settings_mace">PIA MACE™</string>
    <string name="settings_mace_summary">Will block ads, trackers and malware while you\'re connected to the VPN</string>
    <string name="version">Version</string>
    <string name="application_information">APPLICATION INFORMATION</string>
    <string name="data_encyrption">Data Encryption</string>
    <string name="data_auth">Data authentication</string>
    <string name="handshake">Handshake</string>
    <string name="preference_connection">CONNECTION</string>
    <string name="preference_encryption">ENCRYPTION</string>
    <string name="send_debug_log">Send Debug Log to support</string>
    <string name="preferences_widget_title">Widget Settings</string>
    <string name="preferences_widget_summary">Make our widgets work with your home screen</string>
    <string name="widget_flag_alpha">Flag Alpha</string>
    <string name="widget_background">Background color</string>
    <string name="widget_color">Text color</string>
    <string name="preference_application_settings">GENERAL SETTINGS</string>
    <string name="preference_haptic_title">Haptic Feedback</string>
    <string name="preference_connect_on_boot_summary">Connect on system start</string>
    <string name="preference_haptic_feedback_summary">Vibrate on connection clicked</string>
    <string name="preference_widget_icon_upload_title">Upload icon color</string>
    <string name="preference_widget_icon_download_title">Download icon color</string>
    <string name="color_picker_dialog_title">Select a Color</string>
    <string name="blockipv6_summary">Use an alternative method for preventing IPv6 leaks. Required to block IPv6 leaks on Android &lt; 5.0.</string>
    <string name="blockipv6">Aggressive IPv6 blocking</string>
    <string name="preference_reset_settings">Reset settings to default</string>
    <string name="widget_radius">Widget Radius</string>
    <string name="preference_app_theme">Dark Theme</string>
    <string name="androidalwayson">VPN Kill Switch</string>
    <string name="androidalwaysonsummary">Android includes a better alternative to Kill Switch functionality, click for more information</string>
    <string name="preference_blocking">BLOCKING</string>
    <string name="preference_connect_proxy">Connect via proxy</string>
    <string name="preference_connect_proxy_app">Selected proxy app</string>
    <string name="preference_connect_proxy_summary">Make sure you exclude the app you are using to connect in the per app settings</string>
    <string name="preference_proxy_port">Proxy port</string>
    <string name="proxy_settings_title">PROXY SETTINGS</string>
    <string name="preference_vpn_log_title">View VPN debug log</string>
    <string name="preference_vpn_log_summary">Advanced user view to see VPN log</string>
    <string name="preference_app_update_title">Connect on app update</string>
    <string name="preference_app_update_message">After the app is updated, the app will autoconnect to keep you protected.</string>
    <string name="trusted_cellular_title">Trust cellular networks</string>
    <string name="trusted_cellular_message">Automatically disconnect the VPN on mobile data</string>
    <string name="trusted_wifi_title">Trusted Wifi</string>
    <string name="trusted_wifi_message">The VPN will autoconnect on all wifi networks except those whitelisted by the user</string>
    <string name="settings_block_connections_title">The PIA \"VPN Kill Switch\" feature requires turning ON the Always-ON VPN in the Android Settings</string>
    <string name="settings_block_connections_description">To proceed, go to Settings - Network &amp; Internet - Advanced - VPN - tap on the Settings icon - <b>activate Always-on VPN.</b></string>
    <string name="settings_block_connections_button">Go to Network &amp; Internet Settings</string>
    <string name="kpi_connection_attempts_onboarding_title">Please help us improve our service</string>
    <string name="kpi_connection_attempts_onboarding_body">To help us ensure our service\'s connection performance, you can anonymously share your connection stats with us. These reports do not include any personally identifiable information.</string>
    <string name="use_tcp">Use TCP</string>
    <string name="oneclickconnect">1-click connect</string>
    <string name="block_locallan_off">Access to local network will be allowed. Some apps (such as the Google app) might leak and report your real IP.</string>
    <string name="block_locallan_on">Access to local networks will be blocked</string>
    <string name="block_locallan">Block local network</string>
</resources>