<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="81dp"
            android:layout_height="108dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/ic_vpn_permission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_block_connections_title"
            android:gravity="center_horizontal"
            style="@style/PiaTextTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_block_connections_description"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            style="@style/PiaTextBody1" />

        <Button
            android:id="@+id/openNetworkSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_block_connections_button"
            android:textAllCaps="true"
            android:layout_marginTop="90dp"
            style="@style/PIAButton.Green.Small" />

    </LinearLayout>

</ScrollView>